// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-story-kind no-title.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Story": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "test": 1,
      "title": "Story",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/no-title.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Story',
  test: 1,
};
",
}
`;

exports[`csf-story-kind title-and-parameters.js 1`] = `
Object {
  "components": Object {
    "21455c8d3b1413b6aaaa56c7ca6e1dde": Object {
      "name": "ControlsTable",
    },
  },
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "component": "ControlsTable",
      "components": Object {
        "ControlsTable": "21455c8d3b1413b6aaaa56c7ca6e1dde",
      },
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "parameters": Object {
        "addonControls": Object {
          "smart": false,
        },
        "component": "ControlsTable",
      },
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/title-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Storybook/Blocks/ControlsTable',
  parameters: {
    component: ControlsTable,
    addonControls: {
      smart: false,
    },
  },
};
",
}
`;

exports[`csf-story-kind title-controls-and-parameters.js 1`] = `
Object {
  "components": Object {
    "dec877e66c549940695c423429a5d00b": Object {
      "name": "ControlsTable",
    },
  },
  "kinds": Object {
    "Storybook/Kind": Object {
      "component": "ControlsTable",
      "components": Object {
        "ControlsTable": "dec877e66c549940695c423429a5d00b",
      },
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "parameters": Object {
        "controls": Object {
          "name": Object {
            "label": "Name",
            "order": 9999,
            "type": "ControlTypes.TEXT",
            "value": "Mark",
          },
        },
      },
      "title": "Storybook/Kind",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/title-controls-and-parameters.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Storybook/Kind',
  component: ControlsTable,
  parameters: {
    controls: {
      name: {
        type: ControlTypes.TEXT,
        label: 'Name',
        value: 'Mark',
        order: 9999,
      },
    },
  },
};
",
}
`;

exports[`csf-story-kind with-title.js 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "components": Object {},
      "package": "7b45564d8ad9cf0f6da12c3360f96029",
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "packages": Object {
    "7b45564d8ad9cf0f6da12c3360f96029": Object {
      "fileHash": "7b45564d8ad9cf0f6da12c3360f96029",
      "name": "@component-controls/instrument",
      "repository": Object {
        "browse": "https://github.com/ccontrols/component-controls/tree/master/core/instrument/test/fixtures/csf/kind/with-title.js",
        "docs": "https://github.com/ccontrols/component-controls/tree/master#readme",
        "issues": "https://github.com/ccontrols/component-controls/issues",
      },
      "version": "1.0.1",
    },
  },
  "stories": Object {},
  "transformed": "export default {
  title: 'Storybook/Blocks/ControlsTable',
};
",
}
`;
